apps/config-deployment.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: "config"
  namespace: "default"
  labels:
    app: "config"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "config"
  template:
    metadata:
      labels:
        app: "config"
        environment: "production"
        tier: "geoserver"
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
      - name: "config"
        image: geoservercloud/geoserver-cloud-config:1.8.2
        ports:
          - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: "config"
  labels:
    app: "config"
spec:
  selector:
    app: "config"
  ports:
  - name: http
    port: 8080
    targetPort: 8080
