apps/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "rest"
  namespace: "default"
  labels:
    app: "rest"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "rest"
  template:
    metadata:
      labels:
        app: "rest"
        environment: "production"
        tier: "geoserver"
        monitoringActuator: enabled
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
      - name: rest
        image: geoservercloud/geoserver-cloud-rest:1.8.2
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "1024Mi"
            cpu: "1"
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 50
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 50
        volumeMounts:
          - name: shared-data-directory
            mountPath: "/opt/app/data_directory"
      restartPolicy: Always
      volumes:
        - name: shared-data-directory
          persistentVolumeClaim:
            claimName: nfs-sh
---
apiVersion: v1
kind: Service
metadata:
  name: rest
  labels:
    app: rest
spec:
  ports:
  - name: health
    port: 8081
    targetPort: 8081
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: rest
  type: ClusterIP
