apps/webui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "webui"
  namespace: "default"
  labels:
    app: "webui"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "webui"
  template:
    metadata:
      labels:
        app: "webui"
        environment: "production"
        tier: "geoserver"
        monitoringActuator: enabled
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
      - name: webui
        image: geoservercloud/geoserver-cloud-webui:1.8.2
        ports:
          - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "1024Mi"
            cpu: "1"
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 50
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 50
        volumeMounts:
          - name: shared-data-directory
            mountPath: "/opt/app/data_directory"
          - name: geowebcache-data
            mountPath: "/data/geowebcache"
      restartPolicy: Always
      volumes:
        - name: shared-data-directory
          persistentVolumeClaim:
            claimName: nfs-sh
        - name: geowebcache-data
          persistentVolumeClaim:
            claimName: gwc-share
---
apiVersion: v1
kind: Service
metadata:
  name: webui
  labels:
    app: webui
spec:
  ports:
  - name: health
    port: 8081
    targetPort: 8081
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: webui
  type: ClusterIP
